Revise portfolio HTML structure and content
Updated the portfolio website's HTML structure and content, including skills and project descriptions.

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ with.Beyound the Web Development, i work with software solutions that enhance th
       <div class="skill">CSS</div>
       <div class="skill">JavaScript</div>
       <div class="skill">Java</div>
+      <div class="skill">JDBC</div>
       <div class="skill">python</div>
       <div class="skill">C</div>
       <div class="skill">mySQL</div>
@@ -253,3 +254,4 @@ with.Beyound the Web Development, i work with software solutions that enhance th
 
 </body>
 </html>
+
