--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ with.Beyound the Web Development, i work with software solutions that enhance th
 
   <section id="resume" class="resume">
     <h2>Resume</h2>
-    <a href="resume.pdf" download>Download Resume</a>
+    <a href="Resume.pdf" download>Download Resume</a>
   </section>
 
   <section id="contact" class="contact">
@@ -254,4 +254,5 @@ with.Beyound the Web Development, i work with software solutions that enhance th
 
 </body>
 </html>
+
 
